# ae-agent-skills

./: .gitignore  README.ja.md  README.md  package.json  pyproject.toml
CSXS/: manifest.xml
client/: index.html  main.js
client/lib/: bridge_utils.js  logging.js  request_handlers.js  request_handlers_essential.js  request_handlers_layer_structure.js  request_handlers_scene.js  request_handlers_shape.js  request_handlers_timeline.js  runtime.js  server.js
docs/: cli.ja.md  cli.md  development.ja.md  development.md  reverse-scene-limitations.ja.md  reverse-scene-limitations.md
examples/: scene.accent-cross.json  scene.cuts.example.json  scene.example.json  scene.line-accent-simple.json
host/: index.jsx
host/lib/: common.jsx  mutation_handlers.jsx  mutation_keyframe_handlers.jsx  mutation_layer_structure_handlers.jsx  mutation_scene_apply.jsx  mutation_scene_core.jsx  mutation_scene_handlers.jsx  mutation_scene_validation.jsx  mutation_shape_handlers.jsx  mutation_timeline_handlers.jsx  property_utils.jsx  query_animations_handlers.jsx  query_common.jsx  query_effects_handlers.jsx  query_essential_handlers.jsx  query_expressions_handlers.jsx  query_handlers.jsx  query_layers_handlers.jsx  query_properties_handlers.jsx  query_repeaters_handlers.jsx
schemas/: scene.schema.json
scripts/release/: sync-version.mjs
scripts/signing/: build-zxp-interactive.sh  build-zxp.sh  create-dev-cert.sh  install-zxp.sh
src/ae_cli/: __init__.py  cli_parser.py  cli_runner.py  client.py  (+2 more)
tests/: ae-agent-setup.test.mjs  test_cli.py  test_client.py  test_scene_export.py
(+22 files in other folders)
